day_nine/static-web/ingress-resource.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - myweb.local
    secretName: app-secrets
  rules:
  - host: myweb.local
    http:
      paths:
      - path: /live
        pathType: Exact
        backend:
          service:
            name: my-web
            port:
              number: 8080
  - host: newweb.local
    http:
      paths:
      - path: /new-path
        pathType: Prefix
        backend:
          service:
            name: my-web
            port:
              number: 8080
